force-app/main/default/objects/Covid_Info__c/Covid_Info__c.object-meta.xml
<CustomObject>
    <label>Covid Info</label>
    <nameField>
        <label>States</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Covid Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>