force-app/main/default/objects/Covid_Info__c/fields/Negative__c.field-meta.xml
<CustomField>
    <fullName>Negative__c</fullName>
    <label>Negative</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>