force-app/main/default/objects/Covid_Info__c/fields/Pending__c.field-meta.xml
<CustomField>
    <fullName>Pending__c</fullName>
    <label>Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>