force-app/main/default/objects/Covid_Info__c/fields/Positive__c.field-meta.xml
<CustomField>
    <fullName>Positive__c</fullName>
    <label>Positive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>